route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
  name: nginx-route-edu9
spec:
  host: nginx-edu9.apps.okd4.ktdemo.duckdns.org
  port:
    targetPort: 5000
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: mynginx
    weight: 100
  wildcardPolicy: None
